deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zad2-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app:latest
  template:
    metadata:
      labels:
        app:latest
    spec:
      containers:
      - name: zad2-container
        image: piotrtokarski/app:latest
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 2
