service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task2-service
spec:
  selector:
    app: task2-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
